More react-bootstrap component conversions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="0" tabindex="0">
     <div id="root"></div>
 
-    
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+    <div class="elfsight-app-e9d8b1f7-bd82-4e42-972a-6bf3796fde86 overflow-hidden" data-elfsight-app-lazy></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
